--- a/Stale_products/Stale_products.csproj
+++ b/Stale_products/Stale_products.csproj
@@ -67,6 +67,7 @@
     <Compile Include="ChangeYear.Designer.cs">
       <DependentUpon>ChangeYear.cs</DependentUpon>
     </Compile>
+    <Compile Include="Data.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Schedule.cs">
